--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
 	<!-- copy these lines to your document head: -->
 
 	<meta name="viewport" content="user-scalable=yes, width=1000" />
+	<link href='https://fonts.googleapis.com/css?family=Work+Sans&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Encode+Sans+Expanded:100&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Encode+Sans+Expanded:200&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Encode+Sans+Expanded:300&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Work+Sans:300&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Work+Sans:500&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 
 	<!-- end copy -->
   </head>
@@ -24,7 +30,7 @@
 	<!-- copy these lines to your document: -->
 
 	<div id="index_hype_container" style="margin:auto;position:relative;width:100%;height:100%;overflow:hidden;">
-		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?43795"></script>
+		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?74156"></script>
 	</div>
 
 	<!-- end copy -->
@@ -35,40 +41,47 @@
 
 	<div style="display:none" aria-hidden=true>
 
-		<div>First impressions matter. To design an impressive cover, our process begins with understanding our client’s vision. With sketches and graphic proofs, we work with our clients to bring their ideas to life. We know not to judge a book by its cover, but when others do, we'll make sure it's a design that grabs readers’ attentions.
-
-Yet, the cover design doesn’t end there. We put the same amount of creativivity and precision when designing the back cover, inside cover, spine, and jackets. 
+		<div>Art and Media
 </div>
-		<div>Arts and Media
-</div>
-		<div>Depending on the subject matter and platform, some works require extensive arts and media. Diagrams for a textbookbook, recipe videos for a cookbook, or drawings for a nonfiction, Vanadium Press produces in-house or commissions art and media. We always communicate with clients to ensure the art and media meet their vision objectives.
-
-Creative Commons and Public DomainTo reduce clients’ project costs, we also provide the option to use open source and public domain art and media for commerical and non-commericial publishing. 
-
-Regardless of the method, we’ll ensure the art and media supports the written content in an engaging and pleasant manner.
-
-
-</div>
-		<div>Sizes and Layouts
-</div>
-		<div></div>
-		<div>Pages are the canvas for the content. Selecting the dimension of pages is critical when planning the location and flow of content. 
-
-Print
-Millenia of printing has resulted in countless of paper sizes that vary by region. In the United States, common dimensions range from folio, quatro, and octavo. In the United Kingdom, the A-format and B-format are most often used. Regardless of the paper size and book dimension, Vanadium Press has the capacity to print them all.  
-DigitalLayouts are especially important in digital publishing because of varying screen dimension. A large layout for desktop may not translate on a small mobile display. We create multiple layouts to accomdate mobile, tablet, and desktop screen dimensions.
-</div>
-		<div>Design requires precision. Our team of talented artists and graphic designers are able to create a design that is both attractive and uncomplicated, but is furthermore tasteful and unique. From the choice of typeface to the selection of art, our attention to detail will ensure the work is stunning. 
-</div>
-		<div>Design
-</div>
-		<div>Covers and Jackets
-</div>
-		<div></div>
 		<div>1. Endomembrane System Diagram (Public Domain)
 2. Maiz Cross Section Dawing (CC 4.0, Ninghui Shi)
 3. Fish Road in Taiwan (CC 4.0, Shih-chen Yang)
 </div>
+		<div>Depending on the subject matter, some works require extensive arts and media. Diagrams for a textbook, recipe videos for a cookbook, or drawings for a nonfiction, Vanadium Press produces media in-house and commissions art from trusted partners.
+
+Public Domain
+To reduce project costs, we also provide the option to use open source and public domain art and media for commercial and non-commercial publishing. 
+
+
+
+</div>
+		<div>Layouts
+</div>
+		<div></div>
+		<div>Design</div>
+		<div>Pages are the canvas for written word. Selecting the layout and dimension of pages is critical when planning the location and flow of content. 
+
+
+Print
+Centuries of printing has resulted in countless paper sizes. In the United States, common dimensions range from folio, quatro, and octavo. In the United Kingdom, the A-format and B-format are most often used. Regardless of the dimensions, we have the capacity to print them all.  
+
+DigitalLayouts are especially important in digital publishing because of varying screen dimension. A large, desktop layout may not translate well on a small, mobile layout. We create multiple layouts to accommodate mobile, tablet, and desktop screen dimensions so that the content looks stunning regardless of the device. 
+
+</div>
+		<div>Publishing</div>
+		<div>Distribution</div>
+		<div>Additional</div>
+		<div>To create a publication that is engaging and stunning, it takes a creative and talented team of designers and artists. We craft meticulous designs that are both attractive and uncomplicated, stemming from our client’s vision and style objectives. 
+</div>
+		<div>Design
+</div>
+		<div>Covers
+</div>
+		<div>First impressions matter. To design an impressive cover, our process begins with understanding our client’s vision. With sketches and graphic proofs, we work with our clients to create a design that fits the narrative and is stunning. For the back cover, inside cover, spine, and jackets, we put in the same meticulous and creative process when designing these elements. 
+
+We know not to judge a book by its cover, but when others do, we'll make sure it's a design that grabs readers’ attentions.
+</div>
+		<div></div>
 
 	</div>
 
