--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
 	<link href='https://fonts.googleapis.com/css?family=Encode+Sans+Expanded:300&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Work+Sans:300&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Work+Sans:500&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Roboto&subset=latin' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Roboto:500&subset=latin' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Roboto+Slab&subset=latin' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Roboto:300&subset=latin' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Roboto:700&subset=latin' rel='stylesheet' type='text/css'>
 
 	<!-- end copy -->
   </head>
@@ -30,7 +35,7 @@
 	<!-- copy these lines to your document: -->
 
 	<div id="index_hype_container" style="margin:auto;position:relative;width:100%;height:100%;overflow:hidden;">
-		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?74156"></script>
+		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?35846"></script>
 	</div>
 
 	<!-- end copy -->
@@ -41,8 +46,6 @@
 
 	<div style="display:none" aria-hidden=true>
 
-		<div>Art and Media
-</div>
 		<div>1. Endomembrane System Diagram (Public Domain)
 2. Maiz Cross Section Dawing (CC 4.0, Ninghui Shi)
 3. Fish Road in Taiwan (CC 4.0, Shih-chen Yang)
@@ -70,18 +73,20 @@ DigitalLayouts are especially important in digital publishing because of varying
 </div>
 		<div>Publishing</div>
 		<div>Distribution</div>
-		<div>Additional</div>
+		<div>Other</div>
 		<div>To create a publication that is engaging and stunning, it takes a creative and talented team of designers and artists. We craft meticulous designs that are both attractive and uncomplicated, stemming from our client’s vision and style objectives. 
 </div>
 		<div>Design
 </div>
-		<div>Covers
-</div>
+		<div></div>
 		<div>First impressions matter. To design an impressive cover, our process begins with understanding our client’s vision. With sketches and graphic proofs, we work with our clients to create a design that fits the narrative and is stunning. For the back cover, inside cover, spine, and jackets, we put in the same meticulous and creative process when designing these elements. 
 
 We know not to judge a book by its cover, but when others do, we'll make sure it's a design that grabs readers’ attentions.
 </div>
-		<div></div>
+		<div>Covers
+</div>
+		<div>Art and Media
+</div>
 
 	</div>
 
