--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	</style>
 	<!-- copy these lines to your document head: -->
 
-	<meta name="viewport" content="user-scalable=yes, width=1000" />
+	<meta name="viewport" content="user-scalable=yes, width=1050" />
 	<link href='https://fonts.googleapis.com/css?family=Work+Sans&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Encode+Sans+Expanded:100&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Encode+Sans+Expanded:200&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
@@ -28,14 +28,18 @@
 	<link href='https://fonts.googleapis.com/css?family=Roboto+Slab&subset=latin' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Roboto:300&subset=latin' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Roboto:700&subset=latin' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Lato&subset=latin' rel='stylesheet' type='text/css'>
+	
+	<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+<script src="http://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.4/waypoints.min.js"></script>
 
 	<!-- end copy -->
   </head>
   <body>
 	<!-- copy these lines to your document: -->
 
-	<div id="index_hype_container" style="margin:auto;position:relative;width:100%;height:100%;overflow:hidden;">
-		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?74426"></script>
+	<div id="index_hype_container" style="margin:auto;position:relative;width:1050px;height:100%;overflow:hidden;">
+		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?51890"></script>
 	</div>
 
 	<!-- end copy -->
@@ -46,21 +50,6 @@
 
 	<div style="display:none" aria-hidden=true>
 
-		<div>1. Endomembrane System Diagram (Public Domain)
-2. Maiz Cross Section Dawing (CC 4.0, Ninghui Shi)
-3. Fish Road in Taiwan (CC 4.0, Shih-chen Yang)
-</div>
-		<div>Depending on the subject matter, some works require extensive arts and media. Diagrams for a textbook, recipe videos for a cookbook, or drawings for a nonfiction, Vanadium Press produces media in-house and commissions art from trusted partners.
-
-Public Domain
-To reduce project costs, we also provide the option to use open source and public domain art and media for commercial and non-commercial publishing. 
-
-
-
-</div>
-		<div>Layouts
-</div>
-		<div></div>
 		<div>Pages are the canvas for written word. Selecting the layout and dimension of pages is critical when planning the location and flow of content. 
 
 
@@ -70,17 +59,44 @@ Centuries of printing has resulted in countless paper sizes. In the United State
 DigitalLayouts are especially important in digital publishing because of varying screen dimension. A large, desktop layout may not translate well on a small, mobile layout. We create multiple layouts to accommodate mobile, tablet, and desktop screen dimensions so that the content looks stunning regardless of the device. 
 
 </div>
+		<div>Octodecimo</div>
 		<div>To create a publication that is engaging and stunning, it takes a creative and talented team of designers and artists. We craft meticulous designs that are both attractive and uncomplicated, stemming from our client’s vision and style objectives. 
 </div>
 		<div>Design
 </div>
+		<div>102 mm × 165 mm </div>
+		<div>Covers
+</div>
+		<div></div>
 		<div>First impressions matter. To design an impressive cover, our process begins with understanding our client’s vision. With sketches and graphic proofs, we work with our clients to create a design that fits the narrative and is stunning. For the back cover, inside cover, spine, and jackets, we put in the same meticulous and creative process when designing these elements. 
 
 We know not to judge a book by its cover, but when others do, we'll make sure it's a design that grabs readers’ attentions.
 </div>
-		<div>Covers
+		<div>Trigesimo
+secundo
 </div>
 		<div>Art and Media
+</div>
+		<div>Octavo</div>
+		<div>153 mm × 228 mm </div>
+		<div>1. Endomembrane System Diagram (Public Domain)
+2. Maiz Cross Section Dawing (CC 4.0, Ninghui Shi)
+3. Fish Road in Taiwan (CC 4.0, Shih-chen Yang)
+</div>
+		<div>90 mm × 140 mm </div>
+		<div>Duodecimo</div>
+		<div>Depending on the subject matter, some works require extensive arts and media. Diagrams for a textbook, recipe videos for a cookbook, or drawings for a nonfiction, Vanadium Press produces media in-house and commissions art from trusted partners.
+
+Public Domain
+To reduce project costs, we also provide the option to use open source and public domain art and media for commercial and non-commercial publishing. 
+
+
+
+</div>
+		<div>127 mm × 187 mm </div>
+		<div>Replay Animation
+</div>
+		<div>Layouts
 </div>
 
 	</div>
