--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	<!-- copy these lines to your document: -->
 
 	<div id="index_hype_container" style="margin:auto;position:relative;width:1050px;height:100%;overflow:hidden;">
-		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?51890"></script>
+		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?69940"></script>
 	</div>
 
 	<!-- end copy -->
@@ -94,7 +94,7 @@ To reduce project costs, we also provide the option to use open source and publi
 
 </div>
 		<div>127 mm × 187 mm </div>
-		<div>Replay Animation
+		<div>Play Animation
 </div>
 		<div>Layouts
 </div>
