--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	</style>
 	<!-- copy these lines to your document head: -->
 
-	<meta name="viewport" content="user-scalable=yes, width=1050" />
+	<meta name="viewport" content="user-scalable=yes, initial-scale=1.0, width=320" />
 	<link href='https://fonts.googleapis.com/css?family=Work+Sans&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Encode+Sans+Expanded:100&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Encode+Sans+Expanded:200&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
@@ -38,8 +38,8 @@
   <body>
 	<!-- copy these lines to your document: -->
 
-	<div id="index_hype_container" style="margin:auto;position:relative;width:1050px;height:100%;overflow:hidden;">
-		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?69940"></script>
+	<div id="index_hype_container" style="margin:auto;position:relative;width:100%;height:4300px;overflow:hidden;">
+		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?63643"></script>
 	</div>
 
 	<!-- end copy -->
@@ -50,27 +50,29 @@
 
 	<div style="display:none" aria-hidden=true>
 
-		<div>Pages are the canvas for written word. Selecting the layout and dimension of pages is critical when planning the location and flow of content. 
+		<div>Covers
+</div>
+		<div>Pages are a canvas for the written word. Selecting the layout and dimension of pages is critical when planning the location and flow of content. 
 
 
 Print
-Centuries of printing has resulted in countless paper sizes. In the United States, common dimensions range from folio, quatro, and octavo. In the United Kingdom, the A-format and B-format are most often used. Regardless of the dimensions, we have the capacity to print them all.  
+Centuries of printing has resulted in countless paper sizes. In the United States, common dimensions range from folio, quatro, and octavo. In the United Kingdom, the A-format and B-format are most often used. No matter the dimensions, we have the capacity to print every size.  
 
-DigitalLayouts are especially important in digital publishing because of varying screen dimension. A large, desktop layout may not translate well on a small, mobile layout. We create multiple layouts to accommodate mobile, tablet, and desktop screen dimensions so that the content looks stunning regardless of the device. 
+DigitalLayouts are especially important in digital publishing because of varying screen dimension. A layout on a larger desktop display may not translate onto a smaller mobile display. We create multiple layouts to accommodate mobile, tablet, and desktop screen dimensions so that the content is appealing regardless of the device.
 
 </div>
 		<div>Octodecimo</div>
-		<div>To create a publication that is engaging and stunning, it takes a creative and talented team of designers and artists. We craft meticulous designs that are both attractive and uncomplicated, stemming from our client’s vision and style objectives. 
-</div>
-		<div>Design
+		<div>To create a publication that is engaging and stunning, it takes a creative and talented team of designers and artists. We craft meticulous designs that are both attractive and simple, stemming from our client’s vision and style objectives. 
 </div>
 		<div>102 mm × 165 mm </div>
-		<div>Covers
+		<div>Design
 </div>
 		<div></div>
-		<div>First impressions matter. To design an impressive cover, our process begins with understanding our client’s vision. With sketches and graphic proofs, we work with our clients to create a design that fits the narrative and is stunning. For the back cover, inside cover, spine, and jackets, we put in the same meticulous and creative process when designing these elements. 
+		<div>First impressions matter. To design an impressive cover, our process begins with understanding our client’s concept. With sketches and graphic proofs, we work with together to create a design that fits the narrative while outshining competitors. For the back cover, inside cover, spine, and jackets, we approach each element with the same level of detail and creativity.
 
-We know not to judge a book by its cover, but when others do, we'll make sure it's a design that grabs readers’ attentions.
+We know not to judge a book by its cover, but when others do, we'll make sure it's a design that grabs their attention.
+</div>
+		<div>Layouts
 </div>
 		<div>Trigesimo
 secundo
@@ -85,7 +87,7 @@ secundo
 </div>
 		<div>90 mm × 140 mm </div>
 		<div>Duodecimo</div>
-		<div>Depending on the subject matter, some works require extensive arts and media. Diagrams for a textbook, recipe videos for a cookbook, or drawings for a nonfiction, Vanadium Press produces media in-house and commissions art from trusted partners.
+		<div>Depending on the subject matter, some works may need extensive artwork. Diagrams for a textbook, recipe videos for a cookbook, or drawings for a fiction novel, Vanadium Press produces media in-house and commissions art from trusted partners.
 
 Public Domain
 To reduce project costs, we also provide the option to use open source and public domain art and media for commercial and non-commercial publishing. 
@@ -94,9 +96,20 @@ To reduce project costs, we also provide the option to use open source and publi
 
 </div>
 		<div>127 mm × 187 mm </div>
-		<div>Play Animation
+		<div>Replay Animation
 </div>
-		<div>Layouts
+		<div>1. Endomembrane System Diagram (Public Domain)
+2. Maiz Cross Section Dawing 
+(CC 4.0, Ninghui Shi)
+3. Fish Road in Taiwan 
+(CC 4.0, Shih-chen Yang)
+</div>
+		<div>1. Endomembrane System Diagram 
+    (Public Domain)
+2. Maiz Cross Section Dawing 
+    (CC 4.0, Ninghui Shi)
+3. Fish Road in Taiwan 
+    (CC 4.0, Shih-chen Yang)
 </div>
 
 	</div>
