--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	<!-- copy these lines to your document: -->
 
 	<div id="index_hype_container" style="margin:auto;position:relative;width:100%;height:4300px;overflow:hidden;">
-		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?57573"></script>
+		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?90178"></script>
 	</div>
 
 	<!-- end copy -->
@@ -50,7 +50,13 @@
 
 	<div style="display:none" aria-hidden=true>
 
+		<div>Duodecimo</div>
+		<div>Octavo</div>
+		<div>127 mm × 187 mm </div>
+		<div>102 mm × 165 mm </div>
 		<div>Covers
+</div>
+		<div>Replay Animation
 </div>
 		<div>Pages are a canvas for the written word. Selecting the layout and dimension of pages is critical when planning the location and flow of content. 
 
@@ -61,32 +67,21 @@ Centuries of printing has resulted in countless paper sizes. In the United State
 DigitalLayouts are especially important in digital publishing because of varying screen dimension. A layout on a larger desktop display may not translate onto a smaller mobile display. We create multiple layouts to accommodate mobile, tablet, and desktop screen dimensions so that the content is appealing regardless of the device.
 
 </div>
-		<div>Octodecimo</div>
-		<div>To create a publication that is engaging and stunning, it takes a creative and talented team of designers and artists. We craft meticulous designs that are both attractive and simple, stemming from our client’s vision and style objectives. 
-</div>
-		<div>102 mm × 165 mm </div>
-		<div>Design
-</div>
-		<div></div>
-		<div>First impressions matter. To design an impressive cover, our process begins with understanding our client’s concept. With sketches and graphic proofs, we work with together to create a design that fits the narrative while outshining competitors. For the back cover, inside cover, spine, and jackets, we approach each element with the same level of detail and creativity.
-
-We know not to judge a book by its cover, but when others do, we'll make sure it's a design that grabs their attention.
-</div>
-		<div>Layouts
-</div>
 		<div>Trigesimo
 secundo
 </div>
-		<div>Art and Media
+		<div>Design
 </div>
-		<div>Octavo</div>
+		<div></div>
 		<div>153 mm × 228 mm </div>
 		<div>1. Endomembrane System Diagram (Public Domain)
 2. Maiz Cross Section Dawing (CC 4.0, Ninghui Shi)
 3. Fish Road in Taiwan (CC 4.0, Shih-chen Yang)
 </div>
-		<div>90 mm × 140 mm </div>
-		<div>Duodecimo</div>
+		<div>First impressions matter. To design an impressive cover, our process begins with understanding our client’s concept. With sketches and graphic proofs, we work with together to create a design that fits the narrative while outshining competitors. For the back cover, inside cover, spine, and jackets, we approach each element with the same level of detail and creativity.
+
+We know not to judge a book by its cover, but when others do, we'll make sure it's a design that grabs their attention.
+</div>
 		<div>Depending on the subject matter, some works may need extensive artwork. Diagrams for a textbook, recipe videos for a cookbook, or drawings for a fiction novel, Vanadium Press produces media in-house and commissions art from trusted partners.
 
 Public Domain
@@ -95,14 +90,35 @@ To reduce project costs, we also provide the option to use open source and publi
 
 
 </div>
-		<div>127 mm × 187 mm </div>
-		<div>Replay Animation
+		<div>Art and Media
 </div>
+		<div>Octodecimo</div>
+		<div>Layouts
+</div>
+		<div>To create a publication that is engaging and stunning, it takes a creative and talented team of designers and artists. We craft meticulous designs that are both attractive and simple, stemming from our client’s vision and style objectives. 
+</div>
+		<div>90 mm × 140 mm </div>
 		<div>1. Endomembrane System Diagram (Public Domain)
 2. Maiz Cross Section Dawing 
 (CC 4.0, Ninghui Shi)
 3. Fish Road in Taiwan 
 (CC 4.0, Shih-chen Yang)
+</div>
+		<div>Depending on the subject matter, some works may need extensive artwork. Diagrams for a textbook, recipe videos for a cookbook, or drawings for a fiction novel, Vanadium Press produces media in-house and commissions art from trusted partners.
+
+Public Domain
+To reduce project costs, we also provide the option to use open source and public domain art and media for commercial and non-commercial publishing. 
+
+
+
+</div>
+		<div>Depending on the subject matter, some works may need extensive artwork. Diagrams for a textbook, recipe videos for a cookbook, or drawings for a fiction novel, Vanadium Press produces media in-house and commissions art from trusted partners.
+
+Public Domain
+To reduce project costs, we also provide the option to use open source and public domain art and media for commercial and non-commercial publishing. 
+
+
+
 </div>
 		<div>1. Endomembrane System Diagram 
     (Public Domain)
